Sprint_1_removed_UI_added_test_and_jacoco_to_measure_test_coverage